--- a/src/pages/Messages.scss
+++ b/src/pages/Messages.scss
@@ -20,4 +20,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  height: 100%;
+  min-height: 0; // Crucial for flex scrolling
+  overflow: hidden;
 }
